--- a/SpringBoot/mybatis-plus/src/main/resources/application.properties
+++ b/SpringBoot/mybatis-plus/src/main/resources/application.properties
@@ -2,34 +2,77 @@ server.port=8080
 
 spring.application.name=mybatis
 
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mybatis?useSSL=false&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.druid.initial-size=5
-spring.datasource.druid.min-idle=5
-spring.datasource.druid.maxActive=20
-spring.datasource.druid.maxWait=60000
-spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
-spring.datasource.druid.minEvictableIdleTimeMillis=300000
-spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
-spring.datasource.druid.testWhileIdle=true
-spring.datasource.druid.testOnBorrow=false
-spring.datasource.druid.testOnReturn=false
-spring.datasource.druid.poolPreparedStatements=true
-spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
-spring.datasource.druid.filters=stat,slf4j
-spring.datasource.druid.connectionProperties=druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
-spring.datasource.druid.web-stat-filter.enabled=true
-spring.datasource.druid.web-stat-filter.url-pattern=/*
-spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*
-spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
-spring.datasource.druid.stat-view-servlet.allow=127.0.0.1,192.168.163.1
-spring.datasource.druid.stat-view-servlet.deny=192.168.1.73
-spring.datasource.druid.stat-view-servlet.reset-enable=false
+#动态数据源配置
+#设置默认的数据源或者数据源组,默认值即为master
+spring.datasource.dynamic.primary=master
+#主库配置
+spring.datasource.dynamic.datasource.master.username=root
+spring.datasource.dynamic.datasource.master.password=root
+spring.datasource.dynamic.datasource.master.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dynamic.datasource.master.url=jdbc:mysql://localhost:3306/mybatis?useSSL=false&characterEncoding=utf8
+
+#公共配置 Druid登录账号 密码
 spring.datasource.druid.stat-view-servlet.login-username=admin
 spring.datasource.druid.stat-view-servlet.login-password=123456
+spring.datasource.dynamic.druid.initial-size=5
+spring.datasource.dynamic.druid.min-idle=5
+spring.datasource.dynamic.druid.maxActive=20
+spring.datasource.dynamic.druid.maxWait=60000
+spring.datasource.dynamic.druid.timeBetweenEvictionRunsMillis=60000
+spring.datasource.dynamic.druid.minEvictableIdleTimeMillis=300000
+spring.datasource.dynamic.druid.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.dynamic.druid.testWhileIdle=true
+spring.datasource.dynamic.druid.testOnBorrow=false
+spring.datasource.dynamic.druid.testOnReturn=false
+spring.datasource.dynamic.druid.poolPreparedStatements=true
+spring.datasource.dynamic.druid.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.dynamic.druid.filters=stat,slf4j
+spring.datasource.dynamic.druid.connectionProperties=druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
+spring.datasource.dynamic.druid.web-stat-filter.enabled=true
+spring.datasource.dynamic.druid.web-stat-filter.url-pattern=/*
+spring.datasource.dynamic.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*
+spring.datasource.dynamic.druid.stat-view-servlet.url-pattern=/druid/*
+spring.datasource.dynamic.druid.stat-view-servlet.allow=127.0.0.1,192.168.163.1
+spring.datasource.dynamic.druid.stat-view-servlet.deny=192.168.1.73
+spring.datasource.dynamic.druid.stat-view-servlet.reset-enable=false
+#从库配置
+spring.datasource.dynamic.datasource.slave_1.username=root
+spring.datasource.dynamic.datasource.slave_1.password=root
+spring.datasource.dynamic.datasource.slave_1.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dynamic.datasource.slave_1.url=jdbc:mysql://localhost:3307/mybatis?useSSL=false&characterEncoding=utf8
+
+#排除默认数据源
+spring.autoconfigure.exclude: com.alibaba.druid.spring.boot.autoconfigure.DruidDataSourceAutoConfigure
+
+
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/mybatis?useSSL=false&characterEncoding=utf8
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.druid.initial-size=5
+#spring.datasource.druid.min-idle=5
+#spring.datasource.druid.maxActive=20
+#spring.datasource.druid.maxWait=60000
+#spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
+#spring.datasource.druid.minEvictableIdleTimeMillis=300000
+#spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
+#spring.datasource.druid.testWhileIdle=true
+#spring.datasource.druid.testOnBorrow=false
+#spring.datasource.druid.testOnReturn=false
+#spring.datasource.druid.poolPreparedStatements=true
+#spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
+#spring.datasource.druid.filters=stat,slf4j
+#spring.datasource.druid.connectionProperties=druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
+#spring.datasource.druid.web-stat-filter.enabled=true
+#spring.datasource.druid.web-stat-filter.url-pattern=/*
+#spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*
+#spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+#spring.datasource.druid.stat-view-servlet.allow=127.0.0.1,192.168.163.1
+#spring.datasource.druid.stat-view-servlet.deny=192.168.1.73
+#spring.datasource.druid.stat-view-servlet.reset-enable=false
+#spring.datasource.druid.stat-view-servlet.login-username=admin
+#spring.datasource.druid.stat-view-servlet.login-password=123456
 logging.level.com.simple.spring.boot.mapper=debug
 
 #mybatis plus mapper文件路径
