更新描述，以及工程配置

--- a/SpringCloud/cloud-spring/cloud-netflix-eureka-server/src/main/resources/application.properties
+++ b/SpringCloud/cloud-spring/cloud-netflix-eureka-server/src/main/resources/application.properties
@@ -9,6 +9,11 @@ eureka.client.fetch-registry=false
 # 关闭自我保护
 eureka.server.enableSelfPreservation=false
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
-
+#清理无效节点的频率 30秒
+eureka.server.eviction-interval-timer-in-ms=30000
+#表示 Eureka Server 开启自我保护的系数，默认：0.85。
+eureka.server.renewal-percent-threshold=0.85
+#默认情况下，Eureka使用客户端心跳来确定客户端是否已启动。除非另有规定，否则Discovery Client将不会根据Spring Boot Actuator传播应用程序的当前运行状况检查状态。这意味着成功注册后Eureka将永远宣布申请处于“UP”状态。可以通过启用Eureka运行状况检查来改变此行为，从而将应用程序状态传播到Eureka。因此，每个其他应用程序将不会在“UP”之外的状态下将流量发送到应用程序。
+eureka.client.healthcheck.enabled=true
 #项目日志
 logging.level.com.cloud.netfix.eureka=debug
