--- a/SpringCloud/cloud-spring/cloud-zipkin/pom.xml
+++ b/SpringCloud/cloud-spring/cloud-zipkin/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>cloud-zipkin</artifactId>
 
     <dependencies>
+        <!-- 链路追踪 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
