--- a/SpringCloud/cloud-spring/cloud-netflix-eureka-server/pom.xml
+++ b/SpringCloud/cloud-spring/cloud-netflix-eureka-server/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>eureka</artifactId>
+    <artifactId>cloud-netfix-eureka-server</artifactId>
 
 
     <dependencies>
