--- a/SpringBoot/common-quartz/pom.xml
+++ b/SpringBoot/common-quartz/pom.xml
@@ -3,9 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>system</artifactId>
-        <groupId>com.spring.boot</groupId>
-        <version>1.0.0.GA</version>
+        <groupId>com.simple.spring.boot</groupId>
+        <artifactId>SpringBoot</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>common-quartz</artifactId>
