--- a/SpringBoot/email/src/main/resources/application.properties
+++ b/SpringBoot/email/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.mail.host=smtp.qq.com
 spring.mail.username=450255266@qq.com
 #QQÓÊÏäµÄÊÚÈ¨Âë
-spring.mail.password=
+spring.mail.password=jnmarkjgghwlbiij
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
